# Inference-for-Hand-Gesture-Classification

./: .gitignore  Build_Torch_Model.ipynb  CMakeLists.txt  README.md  handKeyPoints.cpp  handKeyPoints.h  main.cpp
